Standardise name calulation to calculate
